unpackaged/main/default/objects/ApplicationChecklistConfiguration__c/ApplicationChecklistConfiguration__c.object-meta.xml
<CustomObject>
    <description>Object to manage the Exception handling</description>
    <label>Application Checklist Configuration</label>
    <nameField>
        <displayFormat>ACC-{0000}</displayFormat>
        <label>Application Checklist Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Checklist Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>