unpackaged/main/default/objects/ApplicationChecklistConfiguration__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Refer</fullName>
                <default>true</default>
                <label>Refer</label>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
            <value>
                <fullName>Approve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>