unpackaged/main/default/objects/ApplicationChecklistConfiguration__c/fields/ExceptionDescription__c.field-meta.xml
<CustomField>
    <fullName>ExceptionDescription__c</fullName>
    <label>Exception Description</label>
    <type>TextArea</type>
</CustomField>